# src/main/resources/static/openapi/auth.json
@@ -658,6 +658,11 @@
           "introStatus" : { "type": "boolean" },
           "storeName" : { "type": "string" },
           "gender": { "type": "string", "enum": ["MALE", "FEMALE", "OTHER"] },
+          "alarmTime": {
+            "type": "string",
+            "format": "time",
+            "description": "HH:mm:ss 형식의 알람 시간 (예: \"08:30:00\")"
+          },
           "platform": {
             "type": "array",
             "items": {
@@ -740,6 +745,18 @@
             "type": "string",
             "description": "[\"SNS_CASUAL\", \"FRIENDLY\", \"LIVELY\", \"CALM_EXPLANATORY\"] 중 선택",
             "enum": ["SNS_CASUAL", "FRIENDLY", "LIVELY", "CALM_EXPLANATORY"]
+          },
+          "alarmFrequency": {
+            "type": "string",
+            "description": "[\"ONCE\", \"TWICE\", \"THIRD\"] 중 선택",
+            "example": "TWICE",
+            "enum": ["SNS_CASUAL", "FRIENDLY", "LIVELY", "CALM_EXPLANATORY"]
+          },
+          "alarmTime": {
+            "type": "string",
+            "example": "07:30:00",
+            "format": "time",
+            "description": "HH:mm:ss 형식의 알람 시간 (예: \"08:30:00\")"
           }
         }
       },
